--- a/metadata.yaml
+++ b/metadata.yaml
@@ -22,6 +22,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Divination'
 - !lcc 'BF'
+- GITenberg
 title: "O Oraculo do Passado, do presente e do Futuro (4/7)\r\nParte Quarta: O oraculo\
   \ das Flores"
 url: http://www.gutenberg.org/ebooks/31740
